fix : reformated code and resolved sonar qube code quality issues